# Invoice-Q-A-and-Insights

./: .gitignore  README.md  pyproject.toml
app/: analytics.py  api.py  charts.py  cleaner.py  embeddings.py  extractor.py  failure_analysis.py  llm.py  pdf_processor.py  prompt_evaluation.py  prompts.py  qa.py  qa_evaluation.py  retriever.py  schemas.py  vector_store.py
data/: clean_invoices.csv  exchange_rates.csv  ground_truth.csv  ground_truth_template.csv  questions.csv
data/extracted_text/: 1.txt  10.txt  100.txt  101.txt  102.txt  105.txt  107.txt  109.txt  11.txt  110.txt  111.txt  113.txt  114.txt  115.txt  118.txt  119.txt  12.txt  120.txt  122.txt  123.txt  125.txt  126.txt  129.txt  13.txt  130.txt  131.txt  132.txt  134.txt  135.txt  136.txt  137.txt  138.txt  139.txt  14.txt  141.txt  142.txt  143.txt  145.txt  146.txt  147.txt  (+380 more)
results/: extractions.json  failure_analysis.txt  failures.csv  prompt_scores.csv  qa_scores.csv
scripts/: build_index.py  generate_ground_truth_template.py  pre_extract_text.py  run_extraction.py  view_pdf_text.py
tests/: conftest.py  test_qa.py  test_search.py
