[project]
name = "project-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "chromadb>=1.5.9",
    "huggingface-hub>=1.21.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
